--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "desafio6-websockets",
+  "name": "newdesafio6",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon ./server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
